# JS_Interpreter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Parser/: JavaScriptLexer.g4  JavaScriptParser.g4  generate.sh
src/Parser/AST/: Nodes.h  TreeVisitor.cpp  TreeVisitor.h  Utils.cpp  Utils.h  Visitor.h
src/Parser/JSBaseVisitor/: JavaScriptParserBaseVisitor.cpp  JavaScriptParserBaseVisitor.h
tests/: CMakeLists.txt  TestClass.cpp  TestUtils.cpp  TestUtils.h
tests/AstTests/declaration/function/: 01tree.txt  02tree.txt  03tree.txt  04tree.txt  05tree.txt  06tree.txt
tests/AstTests/expression/additive/: 01.js  01tree.txt
tests/AstTests/expression/assignment/: 01tree.txt  02.js  02tree.txt
tests/AstTests/expression/binary/: 01.js  01tree.txt  02.js  02tree.txt  03tree.txt  04tree.txt  05tree.txt  06tree.txt  07tree.txt
tests/AstTests/expression/binary-bitwise/: 01tree.txt
tests/AstTests/expression/binary-logical/: 01tree.txt  02tree.txt  03tree.txt
tests/AstTests/expression/bitwise-shift/: 01tree.txt
tests/AstTests/expression/complex/: 01tree.txt  02tree.txt
tests/AstTests/expression/equality/: 01tree.txt  02tree.txt
tests/AstTests/expression/grouping/: 01tree.txt  02tree.txt
tests/AstTests/expression/left-hand-side/: 01tree.txt  02tree.txt  03tree.txt  04tree.txt  05tree.txt  06tree.txt  07tree.txt  08tree.txt
tests/AstTests/expression/multiplicative/: 01tree.txt
tests/AstTests/expression/pimary/array/: 01.js  01tree.txt  02tree.txt  03tree.txt  04tree.txt  05tree.txt
tests/AstTests/expression/pimary/literal/: 01tree.txt  02tree.txt  03.js  03tree.txt
tests/AstTests/expression/pimary/object/: 01tree.txt  02tree.txt  03tree.txt  04tree.txt  05tree.txt  06tree.txt  07tree.txt
tests/AstTests/expression/pimary/other/: 01.js  01tree.txt
tests/AstTests/expression/relational/: 01tree.txt  02tree.txt  03tree.txt
tests/AstTests/expression/unary/: 01tree.txt  02tree.txt  03tree.txt
tests/AstTests/statement/block/: 01tree.txt  02tree.txt  03tree.txt
tests/AstTests/statement/break/: 01tree.txt  02tree.txt
tests/AstTests/statement/continue/: 01tree.txt
tests/AstTests/statement/empty/: 01tree.txt
tests/AstTests/statement/expression/: 01tree.txt  02tree.txt  03tree.txt
tests/AstTests/statement/if/: 01tree.txt  02tree.txt  03tree.txt  04tree.txt  05tree.txt
tests/AstTests/statement/iteration/: 01tree.txt  02tree.txt
tests/AstTests/statement/return/: 01tree.txt  02tree.txt  03tree.txt  04.js  04tree.txt
tests/AstTests/statement/variable/: 01tree.txt  02tree.txt  03tree.txt  04tree.txt
tests/AstTests/tokenize/: 01tree.txt  02tree.txt
